<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="270dp">

                <ImageView
                    android:id="@+id/desc_model"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/desc_fabric" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/desc_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/left_arrow"
                        android:textColor="#ff000000"
                        android:scaleType="centerInside"/>

                    <ImageButton
                        android:id="@+id/imageButton5"
                        style="@style/navbar_button"
                        android:layout_marginStart="220dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/diskon" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        style="@style/navbar_button"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/chart" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/desc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@string/clean_sofa" />

                <TextView
                    android:id="@+id/desc_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/price_2"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp">

                <TextView

                    android:id="@+id/desc_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/description_sofa"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    style="@style/plus_button"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/desc_procced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/plus_button_dashboard"
                android:text="@string/procced"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>